# Element

./: .gitignore  LICENSE  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: animation.py  api.py  auto_mod.py  chat.py  event.py  feedback.py  fun.py  help.py  info.py  moderation.py  owner.py  source.py  utility.py
cogs/GWR_works/: animation.py  mod.py
