[tool.poetry]
name = "element"
version = "0.1.0"
description = ""
authors = ["RSGameTech <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
jishaku = "^1.20.0"
discoutils = "^0.0.3"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
